package dk.sdu.mmmi.common.services.Entity;

public interface IActor {

}
