package dk.sdu.mmmi.common.services.Entity;

import dk.sdu.mmmi.common.data.Entity.Coordinates;

public interface ICollidable {
    Coordinates getCoordinates();
}
