package dk.sdu.mmmi.common.services.Entity.Weapon;

public interface IWeapon {
    int getDamagePoints();

    void setDamagePoints(int damage);
}
