package dk.sdu.mmi.enemy;
import dk.sdu.mmmi.common.data.Entity;

public class Enemy extends Entity {
}
