package dk.sdu.mmi.player;

import dk.sdu.mmmi.common.data.Entity;

public class Player extends Entity {
}
